@@ -1,3 +1,8 @@
+2008-08-30  Pavel Roskin  <proski@gnu.org>
+
+	* util/genmoddep.c: Remove for real this time.
+	* DISTLIST: Remove util/genmoddep.c.
+
 2008-08-30  Robert Millan  <rmh@aybabtu.com>
 
 	* kern/i386/pc/startup.S (multiboot_header): Force 4-byte alignment
